--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,7 +16,7 @@ environment:
   matrix:
     - PowerShell: 5
 init:
-  - pwsh: |
+  - ps: |
       (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
       if(!(Test-Path "$env:SCOOP_HOME")) {
         git clone -q --depth=1 --branch 'NEW' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
@@ -27,11 +27,11 @@ for:
       only:
         - PowerShell: 5
     install:
-      - pwsh: . "$env:SCOOP_HOME\test\bin\init.ps1"
+      - ps: . "$env:SCOOP_HOME\test\bin\init.ps1"
     test_script:
-      - pwsh: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
+      - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
-  - pwsh: |
+  - ps: |
       $log = 'Install.log'
       if (Test-Path $log) {
         Get-Content $log -Raw | Write-Host
