--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,21 +4,23 @@ skip_commits:
     - '.vscode/**/*'
 cache:
   - '%USERPROFILE%\Documents\WindowsPowerShell\Modules -> .appveyor.yml'
+  - 'C:\projects\helpers'
+  - '%SCOOP%\apps'
 matrix:
   fast_finish: true
 build: 'off'
 image: Visual Studio 2019
+clone_folder: '%SCOOP%\buckets\Ash258'
 environment:
-  SCOOP: C:\projects\scoop
-  SCOOP_HOME: C:\projects\scoop\apps\scoop\current
+  SCOOP: C:\SCOOP
+  SCOOP_HOME: '%SCOOP%\apps\scoop\current'
   matrix:
     - PowerShell: 5
-    - PowerShell: 6
 init:
   - ps: |
       (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
       if(!(Test-Path "$env:SCOOP_HOME")) {
-        git clone -q --depth=1 'https://github.com/lukesampson/scoop' "$env:SCOOP_HOME"
+        git clone -q --depth=1 --branch 'NEW' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
         git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
       }
 for:
@@ -29,13 +31,6 @@ for:
       - ps: . "$env:SCOOP_HOME\test\bin\init.ps1"
     test_script:
       - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
-  - matrix:
-      only:
-        - PowerShell: 6
-    install:
-      - pwsh: . "$env:SCOOP_HOME\test\bin\init.ps1"
-    test_script:
-      - pwsh: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
   - ps: |
       $log = 'Install.log'
