Fully migrate to Shovel

--- a/bucket/RockstarGameLauncher.json
+++ b/bucket/RockstarGameLauncher.json
@@ -1,6 +1,6 @@
 {
     "version": "nightly",
-    "description": "Rockstar Game Launcher.",
+    "description": "Rockstar Game Launcher",
     "homepage": "https://socialclub.rockstargames.com/rockstar-games-launcher",
     "license": {
         "identifier": "Proprietary",
@@ -14,7 +14,10 @@
         ]
     },
     "url": "https://gamedownloads.rockstargames.com/public/installer/Rockstar-Games-Launcher.exe#/cosi.7z",
-    "pre_install": "Remove-Item \"$dir\\*\" -Include '$PLUGINSDIR', 'Redistributables' -Recurse",
+    "pre_install": [
+        "try { Get-Command 'Test-Persistence' -ErrorAction 'Stop' | Out-Null } catch { error 'Shovel flavour of scoop is required'; exit 258 }",
+        "Remove-AppDirItem '$*', 'Redistributables'"
+    ],
     "shortcuts": [
         [
             "Launcher.exe",
