--- a/bucket/CloneAppUA.json
+++ b/bucket/CloneAppUA.json
@@ -9,13 +9,8 @@
     "url": "https://github.com/mirinsoft/CloneApp-UA/releases/download/0.8.1/cloneapp_ua.zip",
     "hash": "md5:cb870339480a66ba8b7ebeb0a6390975",
     "pre_install": [
-        "$file = 'Data\\cloneapp.ini'",
-        "if (-not (Test-Path \"$persist_dir\\$file\")) {",
-        "    Write-Host 'File' $file 'does not exists. Creating.' -f Yellow",
-        "    $file = \"$dir\\$file\"",
-        "    New-Item $file -Type File -Force | Out-Null",
-        "    Set-Content $file '[UA]' -Encoding Ascii",
-        "}"
+        "try { Get-Command 'Test-Persistence' -ErrorAction 'Stop' | Out-Null } catch { error 'Shovel flavour of scoop is required'; exit 258 }",
+        "Test-Persistence 'Data\\cloneapp.ini' '[UA]'"
     ],
     "shortcuts": [
         [
