--- a/bucket/CloneAppUA.json
+++ b/bucket/CloneAppUA.json
@@ -1,12 +1,12 @@
 {
     "version": "0.8.1",
     "description": "CloneApp Universal Apps. Backs up All Windows Universal Apps settings.",
-    "homepage": "https://www.mirinsoft.com/ms-apps/cloneapp-ua",
+    "homepage": "https://www.builtbybel.com/ms-apps/cloneapp-ua",
     "license": {
         "identifier": "Freeware",
         "url": "https://www.mirinsoft.com/license"
     },
-    "url": "https://github.com/mirinsoft/CloneApp-UA/releases/download/0.8.1/cloneapp_ua.zip",
+    "url": "https://github.com/builtbybel/CloneApp-UA/releases/download/0.8.1/cloneapp_ua.zip",
     "hash": "md5:cb870339480a66ba8b7ebeb0a6390975",
     "pre_install": [
         "try { Get-Command 'Test-Persistence' -ErrorAction 'Stop' | Out-Null } catch { error 'Shovel flavour of scoop is required'; exit 258 }",
@@ -20,12 +20,12 @@
     ],
     "persist": "Data",
     "checkver": {
-        "github": "https://github.com/mirinsoft/CloneApp-UA"
+        "github": "https://github.com/builtbybel/CloneApp-UA"
     },
     "autoupdate": {
-        "url": "https://github.com/mirinsoft/CloneApp-UA/releases/download/$version/cloneapp_ua.zip",
+        "url": "https://github.com/builtbybel/CloneApp-UA/releases/download/$version/cloneapp_ua.zip",
         "hash": {
-            "url": "https://www.mirinsoft.com/ua",
+            "url": "https://www.builtbybel.com/ua",
             "regex": "MD5 Checksum: $md5"
         }
     }
