vscode-(insiders,exploration): Fix URL

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -184,7 +184,7 @@
                     "SCOOP_DEBUG": "true",
                 },
             },
-            "command": "shove",
+            "command": "shovel",
             "args": [
                 "download",
                 "'${file}'",
