--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,44 +1,43 @@
+image: Visual Studio 2022
+build: off
 skip_commits:
   files:
-    - '**/*.md'
-    - '.vscode/**/*'
+  - '**/*.md'
+  - '.vscode/**/*'
+clone_folder: '%SCOOP%\buckets\Ash258'
 cache:
-  - '%USERPROFILE%\Documents\WindowsPowerShell\Modules -> .appveyor.yml'
-  - 'C:\projects\helpers'
-  - '%SCOOP%\apps'
+- '%USERPROFILE%\Documents\WindowsPowerShell\Modules -> .appveyor.yml'
+- 'C:\projects\helpers'
+- '%SCOOP%\apps'
 matrix:
   fast_finish: true
-build: 'off'
-image: Visual Studio 2019
-clone_folder: '%SCOOP%\buckets\Ash258'
 environment:
   SCOOP: C:\SCOOP
   SCOOP_HOME: '%SCOOP%\apps\scoop\current'
   matrix:
-    - PowerShell: 5
+  - PowerShell: 5
 init:
-  - ps: |
-      (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
-      if(!(Test-Path -LiteralPath "$env:SCOOP_HOME" -PathType Container)) {
-        git clone -q --depth=1 --branch 'NEW' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
-        git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
-      } else {
-        Write-Host 'Pulling'
-        git -C $env:SCOOP_HOME pull
-      }
-      & "${env:SCOOP_HOME}/bin/scoop.ps1" --version
+- ps: |
+    (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
+    if(!(Test-Path -LiteralPath "$env:SCOOP_HOME" -PathType Container)) {
+      git clone -q --depth=1 --branch 'NEW' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
+      git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
+    } else {
+      git -C $env:SCOOP_HOME pull
+    }
+    & "${env:SCOOP_HOME}/bin/scoop.ps1" --version
 for:
-  - matrix:
-      only:
-        - PowerShell: 5
-    install:
-      - ps: . "$env:SCOOP_HOME\test\bin\init.ps1"
-    test_script:
-      - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
+- matrix:
+    only:
+    - PowerShell: 5
+  install:
+  - ps: . "$env:SCOOP_HOME\test\bin\init.ps1"
+  test_script:
+  - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
-  - ps: |
-      $log = 'Install.log'
-      if (Test-Path $log) {
-        Get-Content $log -Raw | Write-Host
-        Push-AppveyorArtifact $log
-      }
+- ps: |
+    $log = 'Install.log'
+    if (Test-Path $log) {
+      Get-Content $log -Raw | Write-Host
+      Push-AppveyorArtifact $log
+    }
