--- a/TODO/mteams.yml
+++ b/TODO/mteams.yml
@@ -1,47 +1,31 @@
-{
-    "version": "1.4.00.29469",
-    "description": "Office 365's chats, meetings, files and apps together in one place",
-    "homepage": "https://teams.microsoft.com/start",
-    "license": "Freeware",
-    "architecture": {
-        "64bit": {
-            "url": "https://statics.teams.microsoft.com/production-windows-x64/1.4.00.29469/Teams-1.4.00.29469-full.nupkg",
-            "hash": "sha1:f9b7002da09c17ca0c92e58b3c1e0ffef6761f41"
-        },
-        "32bit": {
-            "url": "https://statics.teams.microsoft.com/production-windows/1.4.00.29469/Teams-1.4.00.29469-full.nupkg",
-            "hash": "sha1:287fccb5c2d20c36d3da2207160600b7969beeb6"
-        },
-        "arm64": {
-            "url": "https://statics.teams.microsoft.com/production-windows-arm64/1.4.00.29469/Teams-1.4.00.29469-full.nupkg",
-            "hash": "sha1:556a752550f4dd0393bc4b710c7161417c1d3bf6"
-        }
-    },
-    "extract_dir": "lib\\net45",
-    "shortcuts": [
-        [
-            "Teams.exe",
-            "Microsoft Teams"
-        ]
-    ],
-    "checkver": {
-        "url": "https://teams.microsoft.com/downloads/desktopurl?env=production&plat=windows&arch=x64&download=false",
-        "regex": "/([\\d.]+)/Teams_windows_x64\\.exe"
-    },
-    "autoupdate": {
-        "architecture": {
-            "64bit": {
-                "url": "https://statics.teams.microsoft.com/production-windows-x64/$version/Teams-$version-full.nupkg"
-            },
-            "32bit": {
-                "url": "https://statics.teams.microsoft.com/production-windows/$version/Teams-$version-full.nupkg"
-            },
-            "arm64": {
-                "url": "https://statics.teams.microsoft.com/production-windows-arm64/$version/Teams-$version-full.nupkg"
-            }
-        },
-        "hash": {
-            "url": "$baseurl/RELEASES"
-        }
-    }
-}
+version: 1.4.00.31569
+description: Office 365's chats, meetings, files and apps together in one place
+homepage: https://teams.microsoft.com/start
+license: Freeware
+architecture:
+  64bit:
+    url: https://statics.teams.microsoft.com/production-windows-x64/1.4.00.31569/Teams-1.4.00.31569-full.nupkg
+    hash: sha1:c6c149ac440ccf9ac1e31dd8b3b898f5a6c2a4c7
+  32bit:
+    url: https://statics.teams.microsoft.com/production-windows/1.4.00.31569/Teams-1.4.00.31569-full.nupkg
+    hash: sha1:af5cadac36ee7ac6aa7a76cdf1d95e9c1218e0f4
+  arm64:
+    url: https://statics.teams.microsoft.com/production-windows-arm64/1.4.00.31569/Teams-1.4.00.31569-full.nupkg
+    hash: sha1:c2921111032fc04ba98834db0112203363d71efc
+extract_dir: lib\net45
+shortcuts:
+- - Teams.exe
+  - Microsoft Teams
+checkver:
+  url: https://teams.microsoft.com/downloads/desktopurl?env=production&plat=windows&arch=x64&download=false
+  regex: /([\d.]+)/Teams_windows_x64\.exe
+autoupdate:
+  architecture:
+    64bit:
+      url: https://statics.teams.microsoft.com/production-windows-x64/$version/Teams-$version-full.nupkg
+    32bit:
+      url: https://statics.teams.microsoft.com/production-windows/$version/Teams-$version-full.nupkg
+    arm64:
+      url: https://statics.teams.microsoft.com/production-windows-arm64/$version/Teams-$version-full.nupkg
+  hash:
+    url: $baseurl/RELEASES
