--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -9,9 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: IssueHandler
-      uses: Ash258/Scoop-GithubActions@stable-win
+      uses: shovel-org/GithubActions@main
       if: github.event.action == 'opened' || (github.event.action == 'labeled' && contains(github.event.issue.labels.*.name, 'verify'))
       env:
-        SHOVEL: '1'
         GITH_EMAIL: cabera.jakub@gmail.com
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SCOOP_BRANCH: NEW
