--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -9,10 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Excavate
-      uses: Ash258/Scoop-GithubActions@stable-win
+      uses: shovel-org/GithubActions@main
       env:
         GITH_EMAIL: cabera.jakub@gmail.com
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SHOVEL: '1'
-        SCOOP_BRANCH: 'NEW'
+        SCOOP_BRANCH: NEW
         SKIP_UPDATED: '1'
