--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,9 +20,10 @@ init:
 - ps: |
     (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
     if(!(Test-Path -LiteralPath "$env:SCOOP_HOME" -PathType Container)) {
-      git clone -q --depth=1 --branch 'NEW' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
+      git clone -q --depth=1 --branch 'ciYml' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
       git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
     } else {
+      git -C $env:SCOOP_HOME checkout ciYml
       git -C $env:SCOOP_HOME pull
     }
     & "${env:SCOOP_HOME}/bin/scoop.ps1" --version
