--- a/bucket/7zip-alpha.yml
+++ b/bucket/7zip-alpha.yml
@@ -1,5 +1,5 @@
 version: "21.04"
-description: Experimental 7zipafd manifest for arm testing. Requires amd64 7zip first.
+description: Experimeasdfntal 7zipafd manifest for arm testing. Requires amd64 7zip first.
 homepage: https://www.7-zip.org/
 license:
   identifier: Freeware,LGPL-2.0-only,BSD-3-Clause
