--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,13 +26,14 @@ init:
       git -C $env:SCOOP_HOME checkout ciYml
       git -C $env:SCOOP_HOME pull
     }
-    & "${env:SCOOP_HOME}/bin/scoop.ps1" --version
 for:
 - matrix:
     only:
     - PowerShell: 5
   install:
-  - ps: . "$env:SCOOP_HOME\test\bin\init.ps1"
+  - ps: |
+      & "${env:SCOOP_HOME}\bin\scoop.ps1" --version
+      & "${env:SCOOP_HOME}\test\bin\init.ps1"
   test_script:
   - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
