--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,7 @@ clone_folder: '%SCOOP%\buckets\Ash258'
 cache:
 - '%USERPROFILE%\Documents\WindowsPowerShell\Modules -> .appveyor.yml'
 - 'C:\projects\helpers'
+- '%SCOOP'
 matrix:
   fast_finish: true
 environment:
@@ -24,6 +25,7 @@ init:
     } else {
       git -C $env:SCOOP_HOME checkout ciYml
       git -C $env:SCOOP_HOME pull
+      Get-ChildItem "$env:SCOOP\buckets" | ForEach-Object { git -C $_.FullName pull }
     }
     & "${env:SCOOP_HOME}\bin\scoop.ps1" --version
 for:
@@ -38,6 +40,7 @@ for:
   - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
 - ps: |
+    Remove-Item -Force -Recurse "$env:SCOOP\buckets\Ash258"
     $log = 'Install.log'
     if (Test-Path $log) {
       Get-Content $log -Raw | Write-Host
