--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,6 +31,8 @@ init:
     if($MyInvocation.ExpectingInput) { $input | & $path  @args } else { & $path  @args }
     exit $LASTEXITCODE
     '@
+
+      shovel config 'aria2-enabled' $false
       shovel config 'show_update_log' $false
       shovel config 'lastUpdate' '258|2421-12-18 08:50:35'
     } else {
@@ -38,14 +40,14 @@ init:
       git -C $env:SCOOP_HOME pull
       Get-ChildItem "$env:SCOOP\buckets" | ForEach-Object { git -C $_.FullName pull }
     }
-    & "${env:SCOOP_HOME}\bin\scoop.ps1" --version
+    shovel --version
 for:
 - matrix:
     only:
     - PowerShell: 5
   install:
   - ps: |
-      & "${env:SCOOP_HOME}\bin\scoop.ps1" --version
+      shovel --version
       & "${env:SCOOP_HOME}\test\bin\init.ps1"
   test_script:
   - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
@@ -56,4 +58,3 @@ on_finish:
       Get-Content $log -Raw | Write-Host
       Push-AppveyorArtifact $log
     }
-    Remove-Item -Force -Recurse "$env:SCOOP\buckets\Ash258"
