--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,6 @@ clone_folder: '%SCOOP%\buckets\Ash258'
 cache:
 - '%USERPROFILE%\Documents\WindowsPowerShell\Modules -> .appveyor.yml'
 - 'C:\projects\helpers'
-- '%SCOOP% -> .appveyor.yml'
 matrix:
   fast_finish: true
 environment:
@@ -20,35 +19,29 @@ environment:
 init:
 - ps: |
     (Get-PSProvider 'FileSystem').Home = 'C:\projects\'
-    if(!(Test-Path -LiteralPath "$env:SCOOP_HOME" -PathType Container)) {
-      git clone -q --depth=1 --branch 'ciYml' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
-      git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
+    git clone -q --depth=1 --branch 'ciYml' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
+    git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
 
-      New-Item "$env:SCOOP\shims" -ItemType Directory
-      Set-Content "$env:SCOOP\shims\shovel.ps1" @'
+    New-Item "$env:SCOOP\shims" -ItemType Directory
+    Set-Content "$env:SCOOP\shims\shovel.ps1" @'
     if (!(Test-Path Variable:PSScriptRoot)) { $PSScriptRoot = Split-Path $MyInvocation.MyCommand.Path -Parent }
     $path = Join-Path "$PSScriptRoot" "../apps/scoop/current/bin/scoop.ps1"
     if($MyInvocation.ExpectingInput) { $input | & $path  @args } else { & $path  @args }
     exit $LASTEXITCODE
     '@
 
-      shovel config 'aria2-enabled' $false
-      shovel config 'show_update_log' $false
-      shovel config 'lastUpdate' '258|2421-12-18 08:50:35'
-    } else {
-      git -C $env:SCOOP_HOME checkout ciYml
-      git -C $env:SCOOP_HOME pull
-      Get-ChildItem "$env:SCOOP\buckets" | ForEach-Object { git -C $_.FullName pull }
-    }
+    shovel config 'aria2-enabled' $false
+    shovel config 'dbgBypassArmCheck' $true
+    shovel config 'show_update_log' $false
+    shovel config 'lastUpdate' '258|2421-12-18 08:50:35'
+
     shovel --version
 for:
 - matrix:
     only:
     - PowerShell: 5
   install:
-  - ps: |
-      shovel --version
-      & "${env:SCOOP_HOME}\test\bin\init.ps1"
+  - ps: . "${env:SCOOP_HOME}\test\bin\init.ps1"
   test_script:
   - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
