--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ init:
     git clone -q --depth=1 --branch 'ciYml' 'https://github.com/Ash258/Scoop-Core' "$env:SCOOP_HOME"
     git clone -q --depth=1 'https://github.com/ScoopInstaller/Main' "$env:SCOOP\buckets\main"
 
-    New-Item "$env:SCOOP\shims" -ItemType Directory
+    New-Item "$env:SCOOP\shims" -ItemType Directory | Out-Null
     Set-Content "$env:SCOOP\shims\shovel.ps1" @'
     if (!(Test-Path Variable:PSScriptRoot)) { $PSScriptRoot = Split-Path $MyInvocation.MyCommand.Path -Parent }
     $path = Join-Path "$PSScriptRoot" "../apps/scoop/current/bin/scoop.ps1"
@@ -43,7 +43,7 @@ for:
   install:
   - ps: . "${env:SCOOP_HOME}\test\bin\init.ps1"
   test_script:
-  - ps: . "$env:SCOOP_HOME\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
+  - ps: . "${env:SCOOP_HOME}\test\bin\test.ps1" -TestPath "$env:APPVEYOR_BUILD_FOLDER"
 on_finish:
 - ps: |
     $log = 'Install.log'
