--- a/bucket/Solar-Putty.yml
+++ b/bucket/Solar-Putty.yml
@@ -8,7 +8,7 @@ installer:
   script: |
     Expand-7zipArchive "$dir\Solar-PuTTY.exe" -Removal
     Move-Item "$dir\`$_*\*" $dir -Force
-    Remove-AppDirItem '$*' -Force -Recurse
+    Remove-AppDirItem '$*'
 uninstaller:
   script: |
     if ($purge) {
