--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: PullRequestHandler
-      uses: shovel-org/GithubActions@main
+      uses: shovel-org/GithubActions@new.new
       if: startsWith(github.event.comment.body, '/verify')
       env:
         GITH_EMAIL: cabera.jakub@gmail.com
