--- a/bucket/GameSaveManager.yml
+++ b/bucket/GameSaveManager.yml
@@ -2,15 +2,17 @@ version: 3.1.507.0
 description: Game Save Manager. Easily backup, restore and transfer gamesave(s).
 homepage: https://www.gamesave-manager.com
 license: Freeware
-url: https://www.gamesave-manager.com/?s=download&guid=%7BA4008497-2928-4750-8B88-3587C94456A2%7D&a=dl#/cosi.zip
+changelog: https://www.gamesave-manager.com/?s=changelog&ref=a4008497-2928-4750-8b88-3587c94456a2&type=client
+url: https://www.gamesave-manager.com/?s=download&ref=a4008497-2928-4750-8b88-3587c94456a2&action=start#/cosi.zip
 hash: md5:e398772aa29e31c5f76ad3a2173f94ce
 bin: gs_mngr_3.exe
 shortcuts:
 - - gs_mngr_3.exe
   - GameSave Manager
-checkver: (?sm)releasedetailsvalues">\s+([\d.]+).*guid=\{(?<GUID>[\dA-Za-z-]+)\}"
+checkver: (?sm)releasedetailsvalues">\s+([\d.]+).*?s=changelog&ref=(?<GUID>[-\dA-Za-z]+)&
 autoupdate:
-  url: https://www.gamesave-manager.com/?s=download&guid=%7B$matchGUID%7D&a=dl#/cosi.zip
+  changelog: https://www.gamesave-manager.com/?s=changelog&ref=$matchGUID&type=client
+  url: https://www.gamesave-manager.com/?s=download&ref=$matchGUID&action=start#/cosi.zip
   hash:
-    url: https://www.gamesave-manager.com/?s=download&guid=%7B$matchGUID%7D
-    regex: md5 checksum is <i>$md5
+    url: https://www.gamesave-manager.com/?s=download&ref=$matchGUID&action=thanks
+    regex: <td>$md5</td
