--- a/support/oh-my-posh/Ash258.yml
+++ b/support/oh-my-posh/Ash258.yml
@@ -1,4 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
+version: 1
 blocks:
 - type: prompt
   alignment: left
