VMware-AutoUnlocker: Update to version 1.1.4

--- a/bucket/Grammarly.yml
+++ b/bucket/Grammarly.yml
@@ -13,6 +13,7 @@ shortcuts:
 - - GrammarlyForWindows.exe
   - Grammarly
 checkver:
+  disable: true
   url: https://chocolatey.org/packages/grammarly
   regex: Downloads of v\s+([\d.]+)
 autoupdate:
