--- a/bucket/SystemNinja.yml
+++ b/bucket/SystemNinja.yml
@@ -26,7 +26,9 @@ shortcuts:
 persist:
 - plugins
 - config.ini
-checkver: Version ([\d.]+) released
+checkver:
+  regex: Version ([\d.]+) released
+  disable: true
 autoupdate:
   changelog: https://singularlabs.com/releases/system-ninja-$dashVersion/
   url: https://singularlabs.com/download/10294/#/cosi.exe
