CCleanerPro: Update to version 6.02.9938

--- a/bucket/TotalCommander-beta.yml
+++ b/bucket/TotalCommander-beta.yml
@@ -38,6 +38,7 @@ persist:
 - wincmd.ini
 - wincmd.key
 checkver:
+  disable: true
   url: https://www.ghisler.com/whatsnew.htm
   regex: Total\s+Commander\s+([\d.]+)\s+beta\s+(\d\.+)?(?<beta>\d+)
   replace: ${1}b${beta}
