Windows10UpdateAssistant: Update to version 22H2

--- a/bucket/UnrealCommander.yml
+++ b/bucket/UnrealCommander.yml
@@ -45,6 +45,7 @@ persist:
 - Uncom.bar
 - Uncom.ini
 checkver:
+  disable: true
   regex: Unreal Commander v(?<pure>[\d.]+)(?:\s*(beta\s+\d+)\s*)?\(build (?<build>\d+)\)
   replace: ${pure}.${build}
 autoupdate:
